# smooch

./: .gitignore  .parcelrc  .proxyrc.js  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cel2pnm  cel2pnm.c  convert.sh  package-lock.json  package.json
app/: README.md  devel.cfg  docker-compose.yml  init.sql  smooch.cabal  stack.yaml  test.cfg
app/exe/: Main.hs
app/migrations/: M20220302_add_dolls.hs  Rivet.hs
app/src/: CelToPng.hs  Ctxt.hs  Kiss.hs  ParseCNF.hs  ParseCel.hs  ParseKCF.hs  Session.hs  Shell.hs  Upload.hs  Web.hs
app/src/Artists/: Model.hs
app/src/Dolls/: Controller.hs  Model.hs  View.hs
app/src/Sets/: Controller.hs  View.hs
app/src/Users/: Controller.hs  Model.hs  View.hs
app/static/: doll.js  doll.js.map  main.css  screen.css
app/static/kayla/: kayla.cnf  kayla.lzh  setdata.json
app/static/yura/: index.html  setdata.js
app/templates/: _example_set.tpl  about.tpl  index.tpl  kissSet.tpl  layout.tpl  old-index.tpl  where-to-find.tpl
app/templates/users/: kiss-set.tpl  show.tpl
app/tests/: Common.hs  ParseCNFSpec.hs  ParseCelSpec.hs  ParseKCFSpec.hs  ShellSpec.hs  UploadSpec.hs  WebSpec.hs
app/tests/Dolls/: ModelSpec.hs
app/tests/Users/: ControllerSpec.hs  ModelSpec.hs
app/tests/samples/: arwen.lzh  aurora.lzh  kiss-utf8.cnf  lina.lzh  lucca1r.lzh  violetah.lzh
haskell/: .gitgnore  .gitignore  Collision.hs  CreateHTML.hi  CreateHTML.hs  Javascript.hs  Kiss.hi  Kiss.hs  ParseCNF.hi  ParseCNF.hs  ParseObjects.hs  README.md  Shell.hi  Shell.hs  kiss.js  smooch.cabal  stack.yaml
haskell/.hpc/: CreateHTMLSpec.mix  Main.mix  ParseCNFSpec.mix  ShellSpec.mix
haskell/.stack-work/install/x86_64-osx/lts-2.20/7.8.4/flag-cache/: HUnit-1.2.5.2-b921c6940a05b40f38364996f120ca8e  MonadRandom-0.3.0.2-bbf928fa273bf4b506c194bdb3244319  QuickCheck-2.7.6-ab10a6f4b044962967430432c01a83cb  StateVar-1.1.0.0-352999db74de806070154f8c93f487e2  aeson-0.8.0.2-8975ade8a4f1c29f892cc41d3f95aaf5  ansi-terminal-0.6.2.1-408a84740abf5dd0377700f64b559d4a  appar-0.1.4-104b9a183416eea1862a4ce277d499d9  async-2.0.2-8eeaa974e7375a529dd6320cf5f8ab24  attoparsec-0.12.1.6-c1affa2b036da5094aaaaacd9cce4b29  auto-update-0.1.2.2-fa6661f81c0536bd3d0f08177d52eb09  base64-bytestring-1.0.0.1-c1d5e4bef6984ff645b1f26a1920b232  bifunctors-4.2.1-2510f61cc31d611d4be44ce4aa8d4d51  blaze-builder-0.4.0.1-b16a3a2c9cd42e6b25d7f264a5372836  blaze-html-0.8.0.2-5738f75ff310376b92f63608edb3639a  blaze-markup-0.7.0.2-6d1453264a0d28dfe03dda5bb0063199  byteorder-1.0.4-693446f8807737b5814edfc155e0a639  bytestring-builder-0.10.6.0.0-57c8091ea57afec62c051eda2322cc2f  case-insensitive-1.2.0.4-2bc4da3070016b94138a3b8d9c8610f8  comonad-4.2.7.2-ee8d30085b68808f76b5a815e9ea4436  conduit-1.2.5-6bd5acb61ba13b1bfb05f1623d46b86f  contravariant-1.3.1.1-9ec51c274c468bf92f1f36454f4b62f2  cookie-0.4.1.6-6559193e9eaa8e8e6447b80070baa2ea  data-default-0.5.3-080d154f8a51830037b99cc610c6c441  data-default-class-0.0.1-c90f2361289c9de494da7845c67d72e1  data-default-instances-base-0.0.1-8df54e64b9c4c049b1be49b9d5ba8505  data-default-instances-containers-0.0.1-71bcc61fc6ae0a8f9f32cc8e76b7371d  data-default-instances-dlist-0.0.1-8382b17f9141eb39c3393f20dcef41db  data-default-instances-old-locale-0.0.1-18867f61baacd07db3814fdb8be74fbf  distributive-0.4.4-823fa30dcefa22b65bdb69d40ee0ed40  (+66 more)
haskell/aurora/: doll.js  footer.html  header.html  kiss.css  kiss.html  kiss.js
haskell/exe/: Main.hs
haskell/executable/: Main.hi  Main.hs
haskell/migrations/: M20170921_initial_schema.hs
haskell/resources/: doll.js  footer.html  header.html  kiss.css  kiss.html
haskell/src/: CreateHTML.hs  Ctxt.hs  Index.hs  Kiss.hs  KissSet.hs  Main.hs  ParseCNF.hs  Shell.hs  Upload.hs  Web.hs
haskell/src/Users/: Controller.hs  Model.hs  View.hs
haskell/static/: doll.js  kiss.js
haskell/static/sets/arwen/: base.cel  belt.cel  belt2.cel  belt2b.cel  belt3.cel  belt4.cel  belt5.cel  belt6.cel  belt7.cel  belt8.cel  boots.cel  boots2.cel  boots3.cel  boots4.cel  bra.cel  bra2.cel  bra2b.cel  brief.cel  cap.cel  cape.cel  cape2.cel  cape2b.cel  cape3.cel  cape4.cel  cape4b.cel  cape5.cel  cape5a.cel  capeb.cel  capri.cel  clip.cel  cloak.cel  cloakb.cel  collar.cel  corset.cel  corset2.cel  corset3.cel  corset4.cel  corset5.cel  corset6.cel  corset7.cel  (+128 more)
haskell/static/sets/hatter/: 1hatter.cnf  back.cel  band1a.cel  band1b.cel  beliel.kcf  boaa.cel  bra2.cel  brace1a.cel  brace1b.cel  brace3b.cel  coat1b.cel  coat2a.cel  coat2b.cel  coat3a.cel  coat3b.cel  corset1.cel  corset2.cel  corset3a.cel  corset3b.cel  corset4.cel  corset5a.cel  corset5b.cel  corset6.cel  cupb.cel  doll.cel  dress1b.cel  dress2a.cel  dress2b.cel  dress3.cel  dress4.cel  eye1.cel  eye2.cel  eye3.cel  eye4.cel  garterb.cel  glass1.cel  glass2.cel  glove1.cel  glove2.cel  glove4.cel  (+72 more)
haskell/templates/: index.tpl  kissSet.tpl
haskell/templates/users/: index.tpl
haskell/test/: kiss.html  kiss.js
haskell/tests/: .ParseCNFSpec.hs.swp  Common.hs  CreateHTMLSpec.hs  ParseCNFSpec.hs  ShellSpec.hs  UploadSpec.hs
haskell/tests/Users/: ControllerSpec.hs
haskell/tests/samples/: army.cel  army2.cel  arwen.lzh  belt1.cel  belt2.cel  black.cel  blacktig.cel  blink.cel  bltank.cel  boot.cel  boredom.lzh  bstripe.cel  btank.cel  butterfl.cel  buttert.cel  ccs.cel  chain.cel  corset.cel  cute.cel  cutup.cel  design.cel  dickies.cel  emo.cel  fishnet.cel  fruit.cel  fuxxshir.cel  fuzzskir.cel  fuzzyswe.cel  glow.cel  green.cel  halfred.cel  ham.cel  hatter.lzh  hi.cel  hoochie.cel  hyad.lzh  intro.cel  jacket.cel  japan.cel  jean.cel  (+51 more)
haskell/tests/samples/aurora/: aurora.cel
haskell/tests/samples/hatter/: boab.cel  bra1.cel  brace2.cel  brace3a.cel  coat1a.cel  cupa.cel  dress1a.cel  eyemenu.cel  eyprp.cel  gartera.cel  glove3.cel  hat1.cel  hat11.cel  hat2.cel  hat4a.cel  hat7a.cel  hat7b.cel  lip3.cel  lipmenu.cel  lollipop.cel  lpblk.cel  lpbrn.cel  lpnon.cel  lppnk.cel  lpred.cel  madhat~1.txt  mdimenu.cel  mskmenu.cel  neck1b.cel  neck2a.cel  neck7a.cel  patcha.cel  ring.cel  shoe2a.cel  shoe2b.cel  shoe6b.cel  shoe7a.cel  shoe7b.cel  shoe9.cel  shrt3b.cel  (+8 more)
(+492 files in other folders)
