name:                smooch
version:             0.1.0.3
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Libby H.
maintainer:          libby@daydrea.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable smooch
  hs-source-dirs:      src, templates
  main-is:             Main.hs
  other-modules:       Kiss, ParseCNF, Shell, Upload
  -- other-extensions:
  build-depends:       base,
                       wai, wai-extra,
                       warp,
                       http-types,
                       resourcet,
                       lens,
                       heist,
                       parsec, aeson,
                       process, system-filepath, directory,
                       filepath, transformers, mtl,
                       text, bytestring,
                       wai-middleware-static, either,
                       fn, fn-extra, xmlhtml, logging
  -- hs-source-dirs:
  default-language:    Haskell2010

test-suite tests
  hs-source-dirs: src, templates, tests
  ghc-options: -Wall
  default-language: Haskell2010
  main-is: Spec.hs
  other-modules: ParseCNFSpec, ShellSpec, UploadSpec, Kiss, ParseCNF, Main, Shell, Upload
  type: exitcode-stdio-1.0
  build-depends:       base,
                       wai, wai-extra,
                       warp,
                       http-types,
                       resourcet,
                       parsec, aeson,
                       process, system-filepath, directory,
                       filepath, transformers, mtl,
                       text, bytestring, fn, fn-extra,
                       wai-middleware-static, either, hspec
