name:                smooch
version:             0.2.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Libby H.
maintainer:          libby@daydrea.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable smooch
  hs-source-dirs:      src, templates
  main-is:             Main.hs
  build-depends:       base,
                       wai, wai-extra,
                       warp,
                       http-types,
                       resourcet,
                       lens,
                       heist, map-syntax,
                       parsec, aeson,
                       process, system-filepath, directory,
                       filepath, transformers, mtl,
                       text, bytestring,
                       wai-middleware-static, either,
                       fn, fn-extra, xmlhtml, logging
  default-language:    Haskell2010

library
  hs-source-dirs:      src, templates
  exposed-modules:       Kiss, ParseCNF, Shell, Upload
  -- other-extensions:
  build-depends:       base,
                       wai, wai-extra,
                       warp,
                       http-types,
                       resourcet,
                       lens,
                       heist, map-syntax,
                       parsec, aeson,
                       process, system-filepath, directory,
                       filepath, transformers, mtl,
                       text, bytestring,
                       wai-middleware-static, either,
                       fn, fn-extra, xmlhtml, logging
  default-language:    Haskell2010

test-suite tests
  hs-source-dirs:      tests
  ghc-options:         -Wall
  default-language:    Haskell2010
  main-is:             Spec.hs
  other-modules:       ParseCNFSpec, ShellSpec, UploadSpec
  type:                exitcode-stdio-1.0
  build-depends:       base,
                       smooch,
                       hspec,
                       either,
                       wai-extra,
                       process,
                       parsec
